# portolan-tui

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md  codecov.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: contributing.md
portolake/: __init__.py
portolan_tui/: __init__.py
tests/: test_entry_point.py  test_import.py
