[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portolake"
version = "0.1.0"
description = "Lakehouse-grade versioning for Portolan catalogs"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Nissim Lebovits", email = "nlebovits@pm.me" }
]
keywords = ["geospatial", "data lake", "versioning", "catalog", "metadata", "lakehouse", "iceberg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "click>=8.3.1",
    "geoparquet-io>=0.9.0",
    "pyarrow>=12.0.0,<22.0.0",  # v22+ has ABI incompatibility with abseil on some systems
]

[project.entry-points."portolan.backends"]
iceberg = "portolake:IcebergBackend"

[project.urls]
"Homepage" = "https://github.com/portolan-sdi/portolake"
"Bug Tracker" = "https://github.com/portolan-sdi/portolake/issues"
"Documentation" = "https://portolan-sdi.github.io/portolake/"
"Source" = "https://github.com/portolan-sdi/portolake"

[project.optional-dependencies]
dev = [
    "codespell>=2.4.1",
    "commitizen>=4.13.4",
    "hypothesis>=6.151.5",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.5.0",
    "ruff>=0.14.11",
    "vulture>=2.14",
    "xenon>=0.9.3",
]

[tool.hatch.build.targets.wheel]
packages = ["portolake"]

# ---------- commitizen ----------

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = true

# ---------- testing ----------

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --cov=portolake --cov-report=term-missing --cov-fail-under=0"
markers = [
    "unit: Fast, isolated, no I/O (< 100ms each)",
    "integration: Multi-component, may touch filesystem",
    "network: Requires network access (mocked locally, real in CI nightly)",
    "benchmark: Performance measurement, tracked over time",
    "slow: Takes > 5 seconds",
]

[tool.coverage.run]
source = ["portolake"]
branch = true
omit = [
    "portolake/__init__.py",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ---------- linting & formatting ----------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["portolake"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------- dead code ----------

[tool.vulture]
min_confidence = 80
paths = ["portolake", "tests"]
sort_by_size = true
verbose = false
